# metal-cpp-cmake

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/heavy-metal/00-window-redux/: 00-window-redux.cpp  AppDelegate.hpp  Renderer.hpp  ViewDelegate.hpp
src/heavy-metal/01-primitive-redux/: AppDelegate.hpp  Renderer.hpp
src/heavy-metal/02-argbuffers-redux/: AppDelegate.hpp  Renderer.hpp  common.hpp
src/heavy-metal/03-animation-redux.cpp/: 03-animation-redux.cpp  AppDelegate.hpp  Renderer.hpp
src/heavy-metal/04-instancing-redux/: AppDelegate.hpp  Renderer.hpp
src/heavy-metal/05-perspective-redux/: AppDelegate.hpp  MTKViewDelegate.hpp  Renderer.hpp  common.hpp  simd_math.hpp
